--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
     height: 100vh;
     display: grid;
-    grid-template-rows: 140px 100%;
+    grid-template-rows: 150px 100%;
     justify-items: center;
     align-items: center;
     background: var(--dark);
@@ -22,6 +22,7 @@ form {
     height: 60px;
     display: grid;
     grid-template-columns: 80% 10% 10%;
+    align-self: flex-end;
     align-items: center;
     background-color: var(--main);
     border-radius: 50px;
@@ -54,7 +55,37 @@ input[type="text"]:focus, button:focus {
     outline: none;
     border: none;
 }
+a {
+    color: white;
+    text-decoration: none;
+}
 
+.top {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.title-cont {
+    height: 40px;
+    width: 400px;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main);
+    border-radius: 0 0 20px 20px;
+    font-weight: 100;
+}
+.title-link {
+    display: flex;
+    gap: 10px;
+}
+.title-link h5 {
+    font-weight: normal;
+    font-family: monospace;
+}
 .search-input {
     margin-left: 30px;
 }
@@ -109,7 +140,8 @@ input[type="text"]:focus, button:focus {
     display: grid;
     align-items: flex-start;
     justify-items: center;
-    gap: 40px;
+    gap: 50px;
+    padding-bottom: 50px;
 }
 .w-cont {
     width: 480px;
@@ -120,12 +152,13 @@ input[type="text"]:focus, button:focus {
     border-radius: 20px;
     box-shadow: 0 0 10px 3px black;
     padding: 25px 20px 20px 40px;
+    margin-top: 50px;
 }
 .w-sides {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 .w-title {
     padding-bottom: 10px;
@@ -141,7 +174,7 @@ input[type="text"]:focus, button:focus {
     font-weight: normal;
 }
 .w-img {
-    width: 160px;
+    width: 150px;
 }
 .sun-cont {
     display: flex;
