--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a {
 }
 .title-cont {
     height: 40px;
-    width: 400px;
+    width: 380px;
     position: absolute;
     top: 0;
     display: flex;
@@ -79,6 +79,7 @@ a {
     font-weight: 100;
 }
 .title-link {
+    margin-top: -6px;
     display: flex;
     gap: 10px;
 }
